--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -5,26 +5,27 @@
    "metadata": {},
    "source": [
     "# Data Wangling for Loan Datasets\n",
-    "Perform data wrangling for 2018 loan data collected from LendingClub. The datasets include four csv files containing loan data for each quarter in 2018."
+    "Perform data wrangling for 2018 loan data collected from LendingClub. The datasets include four csv files containing loan data for each quarter in 2018. The datasets can be founded [here](https://github.com/nphan20181/Loan-Default-Prediction/tree/master/data)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Part 1: Import Data](#Part-1:-Import-Data)\n",
-    "- [Part 2: Inspect Data](#Part-2:-Inspect-Data)\n",
-    "- [Part 3: Change Data Type](#Part-3:-Change-Data-Type)\n",
-    "- [Part 4: Handle Missing Values](#Part-4:-Handle-Missing-Values)\n",
-    "- [Part 5: Handle Outliers](#Handle-Outliers)\n",
-    "- [Part 6: Export Data](#Part-6:-Export-Data)"
+    "Step-by-step data wrangling:\n",
+    "- [Step 1: Import Data](#step-1:-import-data)\n",
+    "- [Step 2: Inspect Data](#Step-2:-Inspect-Data)\n",
+    "- [Step 3: Change Data Type](#Step-3:-Change-Data-Type)\n",
+    "- [Step 4: Handle Missing Values](#Step-4:-Handle-Missing-Values)\n",
+    "- [Step 5: Handle Outliers](#Step-5:-Handle-Outliers)\n",
+    "- [Step 6: Export Data](#Step-6:-Export-Data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1: Import Data"
+    "## step 1: import data"
    ]
   },
   {
@@ -80,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Inspect Data\n",
+    "## Step 2: Inspect Data\n",
     "- [Numerical Columns](#Numerical-Columns)\n",
     "- [Categorical Columns](#Categorical-Columns)\n",
     "- [Duplicates](#Duplicates)"
@@ -3011,7 +3012,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 3: Change Data Type"
+    "## Step 3: Change Data Type"
    ]
   },
   {
@@ -4220,9 +4221,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Missing Values\n",
-    "- Columns with > 25% of missing values\n",
-    "- Columns with <= 25% of missing values"
+    "## Step 4: Handle Missing Values\n",
+    "- [Columns with more than 25% of missing values](#Columns-with-more-than-25%-of-missing-values)\n",
+    "- [Columns with 25% or less of missing values](#Columns-with-25%-or-less-of-missing-values)"
    ]
   },
   {
@@ -4333,7 +4334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columns with > 25% of missing values"
+    "### Columns with more than 25% of missing values"
    ]
   },
   {
@@ -4667,9 +4668,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Columns with <= 25% of missing values\n",
-    "- Categorical Columns: Missing Values\n",
-    "- Numerical Columns: Missing Values"
+    "### Columns with 25% or less of missing values\n",
+    "- [Categorical Columns: Missing Values](#Categorical-Columns:-Missing-Values)\n",
+    "- [Numerical Columns: Missing Values](#Numerical-Columns:-Missing-Values)"
    ]
   },
   {
@@ -4947,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -5056,7 +5057,7 @@
        "percent_bc_gt_75              98.67      1.33"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5304,7 +5305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Outliers\n",
+    "## Step 5: Handle Outliers\n",
     "- [Box Plots](#Box-Plots)\n",
     "- [z-score](#z-score)"
    ]
@@ -6353,6 +6354,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(495242, 101)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -6373,7 +6394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 6: Export Data"
+    "## Step 6: Export Data"
    ]
   },
   {
