--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "Step-by-step data wrangling:\n",
-    "- [Step 1: Import Data](#step-1:-import-data)\n",
+    "- [Step 1: Import Data](#Step-1:-Import-Data)\n",
     "- [Step 2: Inspect Data](#Step-2:-Inspect-Data)\n",
     "- [Step 3: Change Data Type](#Step-3:-Change-Data-Type)\n",
     "- [Step 4: Handle Missing Values](#Step-4:-Handle-Missing-Values)\n",
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## step 1: import data"
+    "## Step 1: Import Data"
    ]
   },
   {
@@ -4948,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5057,7 +5057,7 @@
        "percent_bc_gt_75              98.67      1.33"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6354,7 +6354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -6363,7 +6363,7 @@
        "(495242, 101)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6374,7 +6374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -6399,7 +6399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
