--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## Step 2: Inspect Data\n",
     "- [Numerical Columns](#Numerical-Columns)\n",
-    "- [Categorical Columns](#Categorical-Columns)\n",
+    "- [Non-numerical Columns](#Non-numerical-Columns)\n",
     "- [Duplicates](#Duplicates)"
    ]
   },
@@ -2382,7 +2382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categorical Columns"
+    "### Non-numerical Columns"
    ]
   },
   {
@@ -4669,7 +4669,7 @@
    "metadata": {},
    "source": [
     "### Columns with 25% or less of missing values\n",
-    "- [Categorical Columns: Missing Values](#Categorical-Columns:-Missing-Values)\n",
+    "- [Non-numerical Columns: Missing Values](#Non-numerical-Columns:-Missing-Values)\n",
     "- [Numerical Columns: Missing Values](#Numerical-Columns:-Missing-Values)"
    ]
   },
@@ -4849,7 +4849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Categorical Columns: Missing Values\n",
+    "##### Non-numerical Columns: Missing Values\n",
     "Leave the missing values as they are because the values may be missing for some reasons."
    ]
   },
