--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -2412,8 +2412,8 @@
     }
    ],
    "source": [
-    "cat_cols = df.select_dtypes(exclude=[\"number\"])    # categorical columns\n",
-    "cat_cols.columns "
+    "non_num_cols = df.select_dtypes(exclude=[\"number\"])    # non-numerical columns\n",
+    "non_num_cols.columns "
    ]
   },
   {
@@ -2751,7 +2751,7 @@
     }
    ],
    "source": [
-    "cat_cols.head()"
+    "non_num_cols.head()"
    ]
   },
   {
@@ -2808,7 +2808,7 @@
     }
    ],
    "source": [
-    "cat_cols.info()"
+    "non_num_cols.info()"
    ]
   },
   {
@@ -4928,8 +4928,8 @@
     }
    ],
    "source": [
-    "cat_low_null_cols = list(df[list(low_null_counts.index)].select_dtypes(exclude=[\"number\"]).columns)\n",
-    "low_null_counts.loc[cat_low_null_cols]"
+    "non_num_low_null_cols = list(df[list(low_null_counts.index)].select_dtypes(exclude=[\"number\"]).columns)\n",
+    "low_null_counts.loc[non_num_low_null_cols]"
    ]
   },
   {
