--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -6403,7 +6403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('out/loan_stats_2018_cleaned.csv')"
+    "df.to_csv('out/loan_stats_2018_cleaned.csv', index=False)"
    ]
   }
  ],
