--- a/LC_Loan_Descriptive_Statistics.ipynb
+++ b/LC_Loan_Descriptive_Statistics.ipynb
@@ -1361,7 +1361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most loans in all statuses tend to have the same inter quartile range for:\n",
+    "Most loans in all statuses tended to have the same values for 25th and 75th percentile and same variation in the data for:\n",
     "- Years since earliest credit line\n",
     "- Total credit lines\n",
     "\n",
@@ -1369,13 +1369,13 @@
     "- **Fully Paid** loans had no data for remaining outstanding principal.\n",
     "- All **High Risk** loans had extreme value for remaining outstanding principal.\n",
     "- Most **Fully Paid** loans had\n",
-    "  - lower inter quartile range for loan amount, monthly installment, interest received to date.\n",
-    "  - higher inter quartile range for total payment, loan return, and principal received to date. \n",
+    "  - lower loan amount, monthly installment, and interest received to date.\n",
+    "  - higher total payment, loan return, and principal received to date. \n",
     "  - more variation in the data for total payment and principal received to date.\n",
     "- Most **Medium Risk** and **High Risk** loans had\n",
-    "  - higher inter quartile range for loan amount, interest rate, and monthly installment.\n",
+    "  - higher loan amount, interest rate, and monthly installment.\n",
     "- Most **High Risk** loans had\n",
-    "  - lower inter quartile range for total payment, loan return, and principal received to date."
+    "  - lower total payment, loan return, and principal received to date."
    ]
   }
  ],
