--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -4198,62 +4198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Handle Outliers\n",
-    "- [Box Plots](#Box-Plots)\n",
-    "- [z-score](#z-score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Box Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# get a list of numerical columns\n",
-    "num_cols = list(df.select_dtypes(include=['number']).columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# show box plot of each numerical columns for detecting outliers\n",
-    "#fig = plt.figure()\n",
-    "\n",
-    "#for col in list(df.select_dtypes(include=['number']).columns):\n",
-    "#    df.boxplot(column=col)\n",
-    "#    plt.xticks(rotation=90)\n",
-    "#    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### z-score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import zscore\n",
-    "import numpy as np\n",
-    "x = np.seterr(divide='ignore', invalid='ignore')"
+    "## Step 5: Handle Outliers"
    ]
   },
   {
@@ -4266,10 +4211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import zscore\n",
+    "import numpy as np\n",
+    "x = np.seterr(divide='ignore', invalid='ignore')\n",
+    "\n",
+    "# get a list of numerical columns\n",
+    "num_cols = list(df.select_dtypes(include=['number']).columns)\n",
+    "\n",
     "outlier_cols = []     # columns that have outliers\n",
     "outliers_list = []\n",
     "\n",
@@ -4290,7 +4242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4299,7 +4251,7 @@
        "(39559, 71)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4311,7 +4263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4320,7 +4272,7 @@
        "(93853, 96)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4331,7 +4283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4366,7 +4318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4378,7 +4330,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4389,7 +4341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4404,7 +4356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4415,7 +4367,7 @@
        "Name: loan_status_flag, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4428,30 +4380,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### loan_return\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df['loan_return'] = df['total_pymnt'] + df['total_rec_int'] - df['loan_amnt']\n",
-    "#df['loan_return'].describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### earliest_cr_line_year\n",
     "Extract the year from column *earliest_cr_line*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4460,7 +4395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4475,7 +4410,7 @@
        "Categories (63, object): [1950, 1951, 1953, 1954, ..., 2012, 2013, 2014, 2015]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4486,7 +4421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4499,7 +4434,7 @@
        "Name: earliest_cr_line_year, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4518,7 +4453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4527,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4541,7 +4476,7 @@
        "Name: earliest_cr_line_month, dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4552,7 +4487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4565,7 +4500,7 @@
        "Name: earliest_cr_line_month, dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4584,7 +4519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4598,7 +4533,7 @@
        "Name: yrs_since_earliest_cr_line, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4612,7 +4547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4629,7 +4564,7 @@
        "Name: yrs_since_earliest_cr_line, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4648,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4657,7 +4592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4670,7 +4605,7 @@
        "Name: last_pymnt_d_year, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4681,7 +4616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4692,7 +4627,7 @@
        "Name: last_pymnt_d_year, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4711,7 +4646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4720,7 +4655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4668,7 @@
        "Name: last_pymnt_d_month, dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4752,7 +4687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4761,7 +4696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4774,7 +4709,7 @@
        "Name: last_credit_pull_d_year, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4785,7 +4720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4797,7 +4732,7 @@
        "Name: last_credit_pull_d_year, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4816,7 +4751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4825,7 +4760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4838,7 +4773,7 @@
        "Name: last_credit_pull_d_month, dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4849,7 +4784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4871,7 +4806,7 @@
        "Name: last_credit_pull_d_month, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4890,7 +4825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4899,7 +4834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4920,7 +4855,7 @@
        "Name: issue_d_month, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4938,7 +4873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4948,7 +4883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4957,7 +4892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4984,7 +4919,7 @@
        " 'verification_status'}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4995,7 +4930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5010,7 +4945,7 @@
     "                                                                'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],\n",
     "                                                   ordered=True)\n",
     "    elif col == 'loan_status_flag':\n",
-    "        ordered_cat = pd.api.types.CategoricalDtype(categories=gv.LOAN_STATUS_FLAG, ordered=True)\n",
+    "        ordered_cat = pd.api.types.CategoricalDtype(categories=gv.LOAN_STATUS_FLAG[:2], ordered=True)\n",
     "    else:\n",
     "        ordered_cat = pd.api.types.CategoricalDtype(categories=list(df[col].value_counts().sort_index().index),\n",
     "                                                   ordered=True)\n",
@@ -5026,7 +4961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
