--- a/lc_inferential_stats.ipynb
+++ b/lc_inferential_stats.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>Lending Club<br />2018 Loan Data<br />Statistical Analysis</center>\n",
+    "# Lending Club<br />2018 Loan Data<br />Statistical Analysis\n",
     "\n",
     "**LendingClub** (LC) is an online credit marketplace that enables a borrower to apply for a loan and an investor to select a loan to invest. When a borrower applies for a loan at LendingClub, the company will screen the applicant. If the loan application gets approved, LendingClub will provide the borrower the interest rate for the loan. Once the borrower accepts the loan, the loan is made available for the investors to select. The investor may choose to invest in a whole loan or a fractional part of a loan. \n",
     "\n",
@@ -12,6 +12,7 @@
     " - __What is the return on investment (ROI)?__\n",
     " - __What is the loss?__\n",
     " - __How many months the borrowers are on the loan?__\n",
+    " - __What is the expected number of defaults for a given sample?__\n",
     "\n",
     "The data used for this project is a pickle file produced by the data wrangling program. The python notebook for data wrangling program can be found [here](https://github.com/nphan20181/Loan-Default-Prediction/blob/master/loan_data_wrangling.ipynb)."
    ]
@@ -175,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For default loans, we are 95% confident that the average loss is between 13,490 and 13,744 dollars."
+    "For default loans, we are 95% confident that the average loss is between 13,490 and 13,744 dollars, regardless of loan term."
    ]
   },
   {
@@ -341,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For fully paid loans, we are 95% confident that the ROI is between 990 and 1015 dollars, regardless of loan term."
+    "For fully paid loans, we are 95% confident that the average ROI is between 990 and 1015 dollars, regardless of loan term."
    ]
   },
   {
