--- a/lc_loan_data_story.ipynb
+++ b/lc_loan_data_story.ipynb
@@ -4,15 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>Lending Club<br />2018 Loan Datasets<br />Data Story Telling</center>"
+    "# Lending Club<br />2018 Loan Datasets<br />Descriptive Statistics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**LendingClub** (LC) is an online credit marketplace that enables a borrower to apply for a loan and an investor to select a loan to invest. When a borrower applies for a loan at LendingClub, the company will screen the applicant. If the loan application gets approved, LendingClub will provide the borrower the interest rate for the loan. Once the borrower accepts the loan, the loan is made available for the investors to select. The investor may choose to invest in a whole loan or a fractional part of a loan. \n",
-    "\n",
     "The purpose of this project is to study the descriptive statistics of the 2018 loan data collected on LendingClub website to provide the company’s prospective investors a thorough insight into the market. This project aims at providing the answer to the following questions:\n",
     "- **What are the characteristics of fully paid vs. default loans?**\n",
     "\n",
@@ -1001,8 +999,13 @@
    "source": [
     "**Number of Loans**\n",
     "\n",
-    " - There is a downward trend on the number of loans for both default and fully paid loans. \n",
-    " - Looking at the total number of loans as a whole, the number of borrowers are high at the begining of the year and are decreasing toward the end of the year."
+    "For both default and fully paid loans:\n",
+    " - There is a downward trend on the number of issued loans. \n",
+    " - The number of issued loans was high from January to May then sharply decrease from May to December.\n",
+    "\n",
+    "**Loan Percentage**\n",
+    " - For default loans, the default percentage is high at the beginning of the year, from January to June, and then decreased toward the end of the year. This indicates that many borrowers defaulted on their loans almost immediately or one to six months after they received the fund.\n",
+    " - For fully paid loans, the trend is upward from Juanuary to December. This indicates that the borrowers who paid off their loans tend to stay longer on the loan."
    ]
   },
   {
@@ -1031,6 +1034,21 @@
    "source": [
     "# plot last payment date by month\n",
     "prep_n_plot(df, 'last_pymnt_d_month', \"2018 LendingClub Loan\\nLoan's Last Payment Date by Status\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of pay-off loans:\n",
+    " - sharply increased from January to May, \n",
+    " - slightly decreased in June\n",
+    " - sharply decreased from June to September\n",
+    " - gradually increased from September to December\n",
+    " \n",
+    "For default loans:\n",
+    " - The number of last payments is high in January\n",
+    " - The number of last payments sharply decreased from January to March, then gradually increased from March to December."
    ]
   },
   {
