--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -4,8 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Wangling for Loan Datasets\n",
-    "Perform data wrangling for 2018 loan data collected from LendingClub. The datasets include four csv files containing loan data for each quarter in 2018. The datasets can be founded [here](https://github.com/nphan20181/Loan-Default-Prediction/tree/master/data)."
+    "# Data Wangling for 2018 LC Loan Datasets\n",
+    "Perform data wrangling for 2018 loan data collected from LendingClub. The datasets include four csv files containing loan data for each quarter in 2018. The datasets can be founded [here](https://github.com/nphan20181/Loan-Default-Prediction/tree/master/data).\n",
+    "\n",
+    "## Data Wrangling Approach\n",
+    "\n",
+    "### Removing Columns\n",
+    "Remove columns that contain information that is not useful or readily available at the time a loan is issued. Examples of those columns are loan id, hardship flag, total received interest, etc. There are 98 columns that are subjects of interest such as loan amount, interest rate, etc. \n",
+    "\n",
+    "### Removing Rows\n",
+    "Remove all records that do not have a loan status of fully paid, charged off or default. \n",
+    "\n",
+    "### Missing Values\n",
+    "Remove columns that have more than 25% of missing values. There are 18 columns. The missing-value percentage for those columns ranges from 54% to 96%. Since the missing-value percentage for those columns is high, it is necessary to remove the columns. \n",
+    "\n",
+    "For columns that have less than or equal to 25% of missing values, fill in the median value for numerical variables and leave the values as null for non-numerical variables. There are 2 non-numerical columns and 13 numerical columns. The missing-value percentage for those columns ranges from 0.01% to 17%. \n",
+    "\n",
+    "### Outliers\n",
+    "Compute z-scores to obtain the records and variables that contain outliers (z-score < -3 or z-score > 3). There are 36,355 rows and 64 columns that contain outliers. Since the number of outliers in the dataset is high (195,492 / 495,242 = 39%), it is necessary to keep the outliers because they may contain significant information, and there are also some models that work well with outliers.\n",
+    "\n",
+    "### New Columns\n",
+    "#### Loan Status Flag\n",
+    "Categorize loan status into 2 categories:\n",
+    " - Fully paid\n",
+    " - Default (Default, Charged Off)\n",
+    "\n",
+    "#### Return on Investment (ROI) \n",
+    "- ROI = total payment amount – loan amount\n",
+    "\n",
+    "#### Months on Loan \n",
+    "- Months on Loan = last payment date – loan issued date\n",
+    "\n",
+    "### Export Data\n",
+    "- Export data to a pickle file for later use.\n",
+    "- Export data dictionary for variables of interest."
    ]
   },
   {
