--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -37,7 +37,9 @@
     "\n",
     "### Export Data\n",
     "- Export data to a pickle file for later use.\n",
-    "- Export data dictionary for variables of interest."
+    "- Export data dictionary for variables of interest.\n",
+    "\n",
+    "<hr>"
    ]
   },
   {
