--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -3878,8 +3878,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove leading and trailing spaces\n",
-    "for col_name in list(df.select_dtypes(include=[\"object\"]).columns):  # get all object columns\n",
+    "# remove leading and trailing spaces for all category columns\n",
+    "for col_name in list(df.select_dtypes(include=[\"category\"]).columns):  \n",
     "    df[col_name] = df[col_name].str.strip()"
    ]
   },
