--- a/loan_data_wrangling.ipynb
+++ b/loan_data_wrangling.ipynb
@@ -3791,7 +3791,7 @@
    "outputs": [],
    "source": [
     "# months in loan = issue date - last payment date\n",
-    "df['months_in_loan'] = round((df['last_pymnt_d'] - df['issue_d']) / np.timedelta64(1,'M'), 1)"
+    "df['months_in_loan'] = round((df['last_pymnt_d'] - df['issue_d']) / np.timedelta64(1,'M'))"
    ]
   },
   {
