--- a/lc_prep_data_for_ml.ipynb
+++ b/lc_prep_data_for_ml.ipynb
@@ -23,7 +23,7 @@
     "sns.set()\n",
     "\n",
     "# columns to be excluded in the prediction\n",
-    "cols_excluded = ['issue_d', 'title', 'earliest_cr_line', 'total_pymnt', 'last_pymnt_d', 'roi',\n",
+    "cols_excluded = ['issue_d', 'title', 'earliest_cr_line', 'total_pymnt', 'last_pymnt_d', 'roi', 'out_prncp',\n",
     "                 'home_ownership', 'application_type', 'emp_length', 'grade']"
    ]
   },
@@ -278,192 +278,192 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>revol_util</th>\n",
+       "      <th>num_op_rev_tl</th>\n",
        "      <th>il_util</th>\n",
-       "      <th>bc_open_to_buy</th>\n",
-       "      <th>delinq_2yrs</th>\n",
-       "      <th>num_tl_120dpd_2m</th>\n",
-       "      <th>mths_since_rcnt_il</th>\n",
-       "      <th>open_acc</th>\n",
-       "      <th>total_il_high_credit_limit</th>\n",
-       "      <th>collections_12_mths_ex_med</th>\n",
-       "      <th>max_bal_bc</th>\n",
-       "      <th>all_util</th>\n",
-       "      <th>...</th>\n",
        "      <th>inq_last_12m</th>\n",
-       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>open_rv_24m</th>\n",
+       "      <th>delinq_amnt</th>\n",
+       "      <th>mo_sin_rcnt_rev_tl_op</th>\n",
+       "      <th>mort_acc</th>\n",
+       "      <th>tot_cur_bal</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mths_since_rcnt_il</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
        "      <th>num_accts_ever_120_pd</th>\n",
-       "      <th>total_cu_tl</th>\n",
-       "      <th>inq_fi</th>\n",
-       "      <th>int_rate</th>\n",
-       "      <th>open_rv_12m</th>\n",
        "      <th>pub_rec</th>\n",
-       "      <th>dti</th>\n",
+       "      <th>avg_cur_bal</th>\n",
+       "      <th>num_actv_bc_tl</th>\n",
+       "      <th>mths_since_recent_bc</th>\n",
+       "      <th>bc_open_to_buy</th>\n",
+       "      <th>installment</th>\n",
        "      <th>default</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.005</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>74.0</td>\n",
-       "      <td>30359.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>141.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>150592.0</td>\n",
+       "      <td>30500.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>191216.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>25099.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0734</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.58</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>30359.0</td>\n",
+       "      <td>93.10</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0.339</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>63.0</td>\n",
-       "      <td>10551.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>27751.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4829.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1198</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28880.0</td>\n",
+       "      <td>22000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>61551.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>14.18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2222.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10551.0</td>\n",
+       "      <td>166.03</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0.360</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>102.0</td>\n",
-       "      <td>4996.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>118917.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3944.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>...</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.1198</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20.25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>131726.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>132817.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10977.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4996.0</td>\n",
+       "      <td>232.44</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0.385</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>113.0</td>\n",
-       "      <td>608.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>67724.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1692.0</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>74220.0</td>\n",
+       "      <td>2300.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>72124.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.1090</td>\n",
+       "      <td>12370.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>12.87</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>608.0</td>\n",
+       "      <td>326.92</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0.265</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>91.0</td>\n",
-       "      <td>59034.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>73379.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10750.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>76475.0</td>\n",
+       "      <td>80300.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>153679.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1090</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.76</td>\n",
+       "      <td>6373.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>59034.0</td>\n",
+       "      <td>915.36</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 70 columns</p>\n",
+       "<p>5 rows × 69 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   il_util  bc_open_to_buy  delinq_2yrs  num_tl_120dpd_2m  mths_since_rcnt_il  \\\n",
-       "0     74.0         30359.0          0.0               0.0                 7.0   \n",
-       "1     63.0         10551.0          0.0               0.0                33.0   \n",
-       "2    102.0          4996.0          0.0               0.0                16.0   \n",
-       "3    113.0           608.0          0.0               0.0                 7.0   \n",
-       "4     91.0         59034.0          0.0               0.0                 4.0   \n",
+       "   revol_util  num_op_rev_tl  il_util  inq_last_12m  open_rv_24m  delinq_amnt  \\\n",
+       "0       0.005            6.0     74.0           2.0          1.0          0.0   \n",
+       "1       0.339           13.0     63.0           1.0          2.0          0.0   \n",
+       "2       0.360            7.0    102.0           4.0          2.0          0.0   \n",
+       "3       0.385            3.0    113.0           4.0          1.0          0.0   \n",
+       "4       0.265            9.0     91.0           0.0          3.0          0.0   \n",
        "\n",
-       "   open_acc  total_il_high_credit_limit  collections_12_mths_ex_med  \\\n",
-       "0       7.0                         0.0                         0.0   \n",
-       "1      14.0                     27751.0                         0.0   \n",
-       "2      13.0                    118917.0                         0.0   \n",
-       "3       6.0                     67724.0                         0.0   \n",
-       "4      12.0                     73379.0                         0.0   \n",
+       "   mo_sin_rcnt_rev_tl_op  mort_acc  tot_cur_bal  total_bc_limit  ...  \\\n",
+       "0                   18.0       4.0     150592.0         30500.0  ...   \n",
+       "1                    3.0       0.0      28880.0         22000.0  ...   \n",
+       "2                    1.0       0.0     131726.0         10000.0  ...   \n",
+       "3                    7.0       0.0      74220.0          2300.0  ...   \n",
+       "4                    2.0       1.0      76475.0         80300.0  ...   \n",
        "\n",
-       "   max_bal_bc  all_util  ...  inq_last_12m  percent_bc_gt_75  \\\n",
-       "0       141.0       1.0  ...           2.0               0.0   \n",
-       "1      4829.0      47.0  ...           1.0              33.3   \n",
-       "2      3944.0      90.0  ...           4.0              33.3   \n",
-       "3      1692.0      94.0  ...           4.0               0.0   \n",
-       "4     10750.0      41.0  ...           0.0              11.1   \n",
+       "   mths_since_rcnt_il  tot_hi_cred_lim  num_accts_ever_120_pd  pub_rec  \\\n",
+       "0                 7.0         191216.0                    0.0      0.0   \n",
+       "1                33.0          61551.0                    1.0      1.0   \n",
+       "2                16.0         132817.0                    3.0      0.0   \n",
+       "3                 7.0          72124.0                    0.0      1.0   \n",
+       "4                 4.0         153679.0                    1.0      0.0   \n",
        "\n",
-       "   num_accts_ever_120_pd  total_cu_tl  inq_fi  int_rate  open_rv_12m  pub_rec  \\\n",
-       "0                    0.0          2.0     1.0    0.0734          0.0      0.0   \n",
-       "1                    1.0          1.0     0.0    0.1198          2.0      1.0   \n",
-       "2                    3.0          1.0     2.0    0.1198          2.0      0.0   \n",
-       "3                    0.0          1.0     2.0    0.1090          1.0      1.0   \n",
-       "4                    1.0          0.0     0.0    0.1090          1.0      0.0   \n",
+       "   avg_cur_bal  num_actv_bc_tl  mths_since_recent_bc  bc_open_to_buy  \\\n",
+       "0      25099.0             1.0                  18.0         30359.0   \n",
+       "1       2222.0             3.0                   3.0         10551.0   \n",
+       "2      10977.0             2.0                  10.0          4996.0   \n",
+       "3      12370.0             1.0                  45.0           608.0   \n",
+       "4       6373.0             4.0                   2.0         59034.0   \n",
        "\n",
-       "     dti  default  \n",
-       "0   0.58        0  \n",
-       "1  14.18        0  \n",
-       "2  20.25        0  \n",
-       "3  12.87        0  \n",
-       "4  30.76        0  \n",
+       "   installment  default  \n",
+       "0        93.10        0  \n",
+       "1       166.03        0  \n",
+       "2       232.44        0  \n",
+       "3       326.92        0  \n",
+       "4       915.36        0  \n",
        "\n",
-       "[5 rows x 70 columns]"
+       "[5 rows x 69 columns]"
       ]
      },
      "execution_count": 3,
@@ -497,7 +497,7 @@
     {
      "data": {
       "text/plain": [
-       "(93853, 70)"
+       "(93853, 69)"
       ]
      },
      "execution_count": 4,
@@ -621,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
