--- a/lc_inferential_stats.ipynb
+++ b/lc_inferential_stats.ipynb
@@ -55,14 +55,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_ci(df_in, alpha=0.05):\n",
+    "def compute_ci(df_in, dist='normal', alpha=0.05):\n",
     "    '''Compute confidence interval'''\n",
     "    \n",
-    "    zscore = stats.norm.ppf(alpha/2)\n",
-    "    se = zscore * np.std(df_in, ddof=1) / np.sqrt(len(df_in))   # standard error\n",
-    "    mu = np.mean(df_in)\n",
+    "    mu = np.mean(df_in)            # mean\n",
+    "    std = np.std(df_in, ddof=1)    # standard deviation\n",
+    "    \n",
+    "    if dist == 'normal':           # normal distribution\n",
+    "        zscore = stats.norm.ppf(alpha/2)\n",
+    "        se = zscore * std / np.sqrt(len(df_in))   # standard error\n",
+    "    else:   # for skewed distribution, compute 75% confidence interval (Chebyshev's Theorem)\n",
+    "        se = 2 * std\n",
     "\n",
-    "    # compute 95% Confidence Interval of the mean\n",
+    "    # compute Confidence Interval of the mean\n",
     "    lower = round(mu + se, 2)             # lower bound\n",
     "    upper = round(mu - se, 2)             # lower bound\n",
     "    \n",
@@ -93,13 +98,15 @@
     "    plt.show()\n",
     "\n",
     "def plot_dist_helper(ax, df_in, bins, label_h, label_offset, legend, mu_label, vline_legend, color, r_digit):\n",
+    "    \"\"\"Plot the distribution and vertical lines\"\"\"\n",
+    "    \n",
     "    mu = round(df_in.mean(), r_digit)\n",
-    "    _ = sns.distplot(df_in, bins=bins, color=color, label=legend)\n",
+    "    _ = sns.distplot(df_in, bins=bins, color=color, label=legend)              # plot the distribution\n",
     "    \n",
     "    # plot mean vertical line\n",
     "    if vline_legend == False:\n",
     "        plt.text(mu-label_offset, label_h, mu_label + str(mu), color=color)    # show text above vline\n",
-    "        ax.axvline(mu, linestyle='--', color=color)\n",
+    "        ax.axvline(mu, linestyle='--', color=color)                            # draw vertical line for mean\n",
     "    else:\n",
     "        ax.axvline(mu, linestyle='--', color=color, label=mu_label + ' = ' + str(mu)) "
    ]
@@ -147,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "(-13743.71, -13489.49)"
+       "(3585.43, -30818.62)"
       ]
      },
      "execution_count": 6,
@@ -156,15 +163,15 @@
     }
    ],
    "source": [
-    "# 95 confidence interval\n",
-    "compute_ci(defaults['roi'])"
+    "# 75% confidence interval\n",
+    "compute_ci(defaults['roi'], dist='skewed')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For default loans, we are 95% confident that the average loss is between 13,490 and 13,744 dollars, regardless of loan term."
+    "For default loans, we are 75% confident that the average loss is between 0 and 30,818 dollars, regardless of loan term."
    ]
   },
   {
@@ -206,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "(-11040.07, -10743.26)"
+       "(4878.08, -26661.41)"
       ]
      },
      "execution_count": 8,
@@ -215,8 +222,8 @@
     }
    ],
    "source": [
-    "# 95% ci for 36 months loan\n",
-    "compute_ci(term_36[term_36['loan_status_flag'] == 'Default']['roi'])"
+    "# 75% ci for 36 months loan\n",
+    "compute_ci(term_36[term_36['loan_status_flag'] == 'Default']['roi'], dist='skewed')"
    ]
   },
   {
@@ -227,7 +234,7 @@
     {
      "data": {
       "text/plain": [
-       "(-18185.16, -17809.83)"
+       "(-2270.35, -33724.64)"
       ]
      },
      "execution_count": 9,
@@ -236,17 +243,17 @@
     }
    ],
    "source": [
-    "# 95% ci for 60 months loan\n",
-    "compute_ci(term_60[term_60['loan_status_flag'] == 'Default']['roi'])"
+    "# 75% ci for 60 months loan\n",
+    "compute_ci(term_60[term_60['loan_status_flag'] == 'Default']['roi'], dist='skewed')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For default loans, we are 95% confidence that the average loss is between:\n",
-    "- 10,744 and 11,040 dollars for 36 months loan\n",
-    "- 17,810 and 18,185 dollars for 60 months loan"
+    "For default loans, we are 75% confidence that the average loss is between:\n",
+    "- 0 and 26,661 dollars for 36 months loan\n",
+    "- 2,270 and 33,724 dollars for 60 months loan"
    ]
   },
   {
@@ -314,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "(998.52, 1014.49)"
+       "(3256.37, -1243.36)"
       ]
      },
      "execution_count": 12,
@@ -323,14 +330,15 @@
     }
    ],
    "source": [
-    "compute_ci(fully_paids['roi'])"
+    "# 75% confidence interval\n",
+    "compute_ci(fully_paids['roi'], dist='skewed')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For fully paid loans, we are 95% confident that the average ROI is between 990 and 1015 dollars, regardless of loan term."
+    "For fully paid loans, we are 75% confident that the average ROI is between 0 and 3,256 dollars, regardless of loan term."
    ]
   },
   {
@@ -372,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "(756.46, 770.06)"
+       "(2439.37, -912.84)"
       ]
      },
      "execution_count": 14,
@@ -381,8 +389,8 @@
     }
    ],
    "source": [
-    "# 95% ci for 36 months loan\n",
-    "compute_ci(term_36[term_36['loan_status_flag'] == 'Fully Paid']['roi'])"
+    "# 75% ci for 36 months loan\n",
+    "compute_ci(term_36[term_36['loan_status_flag'] == 'Fully Paid']['roi'], dist='skewed')"
    ]
   },
   {
@@ -393,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "(1775.78, 1819.97)"
+       "(4817.12, -1221.36)"
       ]
      },
      "execution_count": 15,
@@ -402,17 +410,17 @@
     }
    ],
    "source": [
-    "# 95% ci for 60 months loan\n",
-    "compute_ci(term_60[term_60['loan_status_flag'] == 'Fully Paid']['roi'])"
+    "# 75% ci for 60 months loan\n",
+    "compute_ci(term_60[term_60['loan_status_flag'] == 'Fully Paid']['roi'], dist='skewed')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For fully paid loans, we are 95% confident that the ROI is between:\n",
-    " - 756 and 770 dollars for 36 months loan\n",
-    " - 1776 and 1820 dollars for 60 months loan"
+    "For fully paid loans, we are 75% confident that the ROI is between:\n",
+    " - 0 and 2,439 dollars for 36 months loan\n",
+    " - 0 and 4817 dollars for 60 months loan"
    ]
   },
   {
@@ -490,7 +498,7 @@
     {
      "data": {
       "text/plain": [
-       "(7.15, 7.21)"
+       "(15.52, -1.16)"
       ]
      },
      "execution_count": 18,
@@ -499,8 +507,8 @@
     }
    ],
    "source": [
-    "# 95% ci for 36 months loan\n",
-    "compute_ci(term_36['months_in_loan'])"
+    "# 75% ci for 36 months loan\n",
+    "compute_ci(term_36['months_in_loan'], dist='skewed')"
    ]
   },
   {
@@ -511,7 +519,7 @@
     {
      "data": {
       "text/plain": [
-       "(6.61, 6.72)"
+       "(14.85, -1.53)"
       ]
      },
      "execution_count": 19,
@@ -520,8 +528,8 @@
     }
    ],
    "source": [
-    "# 95% ci for 60 months loan\n",
-    "compute_ci(term_60['months_in_loan'])"
+    "# 75% ci for 60 months loan\n",
+    "compute_ci(term_60['months_in_loan'], dist='skewed')"
    ]
   },
   {
@@ -727,13 +735,11 @@
    "source": [
     "p_default = len(defaults) / len(df)           # probability of default loan\n",
     "no_loans = range(5, 101, 5)\n",
-    "\n",
-    "# build investment portfolio\n",
     "num_defaults = {'no_loans': [],               # number of selected loans\n",
     "                'expected_no_defaults': []}   # expected number of defaults\n",
     "\n",
     "\n",
-    "# compute expected loss with binomial distribution\n",
+    "# estimate number of defaults using binomial distribution\n",
     "for n in no_loans:\n",
     "    mu = np.round(stats.binom.stats(n, p_default)[0])     # expected number of defaults\n",
     "    num_defaults['no_loans'].append(n)                    # number of selected loans\n",
